--- a/README
+++ b/README
@@ -31,17 +31,15 @@ This will create a graph of "foo" & "bar" vs time.  It will be placed in a div w
 
 :wmode (string) - 'opaque'(default), 'window' or 'transparent'. the Window Mode (wmode) parameter for the Flash chart. 
 
-:zoomStartDate (date) -  	If specified, sets the start date of the selected zoom range. 
+:zoomStartTime (date) -  	If specified, sets the start date of the selected zoom range. 
 
-:zoomEndDate (date) -  If specified, sets the end date of the selected zoom range.
+:zoomEndTime (date) -  If specified, sets the end date of the selected zoom range.
 
 :displayAnnotationsFilter (boolean) - If set true, a search box appears at the top of the annotations column that will filter the annotations according to its contents. Defaults to false.
 
 :annotationsWidth (number) - If specified, sets the percentage of the width of the display that the annotations column takes up. Defaults to 25, must be between 5 and 80. 
 
-
-=== Currently Unsupported options:
-* :allowHtml
+:allowHtml
 
 ===License:
 
