--- a/README
+++ b/README
@@ -3,6 +3,8 @@ AnnotatedTimeline
 
 AnnotatedTimeline is a Rails plugin that wraps up the for the Annotated Timeline widget from the Google Visualization API (http://code.google.com/apis/visualization/documentation/gallery/annotatedtimeline.html)
 
+Last Update: 17 Dec 2008
+
 === Usage: 
 
 In your controller:
@@ -16,18 +18,46 @@ In the view:
 
 This will create a graph of "foo" & "bar" vs time.  It will be placed in a div with ID 'div-name'.
 
-
 === Annotations
+
+In your controller:
+
+@annotations = {
+	:foo => { 1.day.ago => ["yesterday", "all my troubles seemed so far away"]}
+	:bar => { 1.day.ago => ["last tuesday"], 2.days.ago => ["last monday"]}
+}
+
+Sending arrays of strings with two elements will render the first element as the title and the second as the text, and sending a one element array will render just the title.
+
+Now, in the view, the variable @annotations be passed in as option :annotations, with any other options in the hash. For example:
+<%= annotated_timeline @data, 500, 200, 'graph', {:annotations => @annotations, :displayExactValues => true} %>
+
 
 === Options
 
-:colors (array of strings) The colors to use to override the default google color scheme for the chart lines and labels. Each element is a string in a valid HTML color format. For example 'red' or '#00cc00'. 
+:allowHtml (boolean) - If set to true, any annotation text that includes HTML tags will be rendered as HTML. Defaults false
 
-:displayExactValues (boolean) - If set to false (the default), value displayed on top may be in a shorter approximated form (56.12k instead of 56123.45). If set to true, values will appear unchanged. 
+:allValuesSuffix (string) - A suffix to be added to all values in the scales and the legend. Defaults blank (no suffix.)
+
+:annotations - see above
+
+:annotationsWidth (number) - If specified, sets the percentage of the width of the display that the annotations column takes up. Defaults to 25, must be between 5 and 80. 
+
+:colors (array of strings) - The colors to use to override the default google color scheme for the chart lines and labels. Each element is a string in a valid HTML color format. For example 'red' or '#00cc00'. 
+
+:displayAnnotationsFilter (boolean) - If set true, a search box appears at the top of the annotations column that will filter the annotations according to its contents. Defaults to false.
+
+:displayExactValues (boolean) - If set to false (the default), value displayed on top may be in a shorter approximated form (56.12k instead of 56123.45). If set to true, values will appear unchanged.
+
+:displayZoomButtons (boolean) - If false, the zoom buttons in the top left corner are disabled. Defaults true.
+
+:legendPosition (string) - Whether to put the colored legend on the same row (default) with the zoom buttons and the date ('sameRow'), or on a new row ('newRow'). 
 
 :min (number) - Use to explicitly set the minimal value to show in the Y axis.
 
-:scaleType (string) - 'fixed'(default) or 'maximize'. If 'maximize' is used, the range of the values axis will span between the minimal and maximal values of the DataTable. If 'fixed' is used, the range of the values axis will span between zero and the maximal values of the DataTable. 
+:scaleColumns (array of numbers) - Specifies which data series are to be used for each of the scales on the chart. The chart can display up to three scales. If only one series is specified, the scale will be displayed to the right of the chart. If two series are specified, the first scale will be displayed to the left, and the second to the right of the chart. If three series are specified, the first to the left, the second to the right, and the third in the middle of the chart. When displaying more than one scale, it is advisable to set scaleType either to 'allfixed' or 'allmaximize'. All of the values are optional, and if an empty array is specified the chart will show no scale. If more than three values are specified, the rest are ignored. If this value is not specified at all, only the first data series scale is displayed on the right. scaleColumns parameter is an array of numbers, in which 0 refers to the first data series, 1 to the second, and so on.
+
+:scaleType (string) - 'fixed', 'maximize', 'allfixed' or 'allmaximize'. If 'maximize' is used, the range of the values axis will span between the minimal and maximal values of the DataTable. If 'fixed' is used, the range of the values axis will span between zero and the maximal values of the DataTable. 'allfixed' and 'allmaximize' do the same, individually for each series. This means that the scale of each series is calculated based on its values only, and not based on all values from all series. When 'allfixed' or 'allmaximize' are used, it makes sense to set the scaleColumns option as well, otherwise some of the series will be displayed in a scale that is not the displayed one.
 
 :wmode (string) - 'opaque'(default), 'window' or 'transparent'. the Window Mode (wmode) parameter for the Flash chart. 
 
@@ -35,11 +65,9 @@ This will create a graph of "foo" & "bar" vs time.  It will be placed in a div w
 
 :zoomEndTime (date) -  If specified, sets the end date of the selected zoom range.
 
-:displayAnnotationsFilter (boolean) - If set true, a search box appears at the top of the annotations column that will filter the annotations according to its contents. Defaults to false.
 
-:annotationsWidth (number) - If specified, sets the percentage of the width of the display that the annotations column takes up. Defaults to 25, must be between 5 and 80. 
+**You may notice that with the exception of annotations, all of these options are taken directly from the options in Google's API. Any new option implemented by the Google API that takes a string, boolean, or number as an argument should work implicitly as per examples above.
 
-:allowHtml
 
 ===License:
 
