added warning to README about using time objects where date should
be used and changed some
lines in the spec so that
they make some more sense

--- a/README
+++ b/README
@@ -13,6 +13,8 @@ In your controller:
 	2.day.ago.to_date => { :foo=>345, :bar=>200 }	
 }
 
+Note that using Time objects *may* work if you don't use annotations, however this plugin is only spec'd for Date objects.
+
 In the view:
 
 <%= inline_annotated_timeline @data, width, height, 'div_id_to_create', options %>
